# costar

./: .gitignore  BUILD.md  CONTEXT.md  HANDOFF.md  README.md  platformio.ini  requirements.txt
data/: layouts.json  screen_layout.json  screen_layout_a.json  screen_layout_b.json  screen_layout_nyt.json  screen_layout_quakes.json
data/dsl/: adsb_nearest.json  clock_analog.json  clock_analog_full.json  clock_analog_quad.json  clock_analog_quarter.json  crypto_price.json  forecast.json  ha_speaker_card.json  homeassistant_control_card.json  stock_quote.json  weather_now.json
docs/: HANDOFF.md  dsl_transforms_and_visibility.md  dsl_user_guide.md  ws_connection_profiles.md
idf/: CMakeLists.txt  Kconfig.projbuild  README.md  partitions.csv  sdkconfig  sdkconfig.defaults
idf/main/: CMakeLists.txt  ConfigScreenEspIdf.cpp  ConfigScreenEspIdf.h  DisplayBootstrapEspIdf.cpp  DisplayBootstrapEspIdf.h  DisplaySpiEspIdf.cpp  DisplaySpiEspIdf.h  DslJson.cpp  DslJson.h  DslTime.cpp  DslTime.h  DslWidgetRuntimeEspIdf.cpp  DslWidgetRuntimeEspIdf.h  FsEspIdf.cpp  GeoLocation.cpp  GeoLocation.h  HttpTransportGate.h  LayoutRuntimeEspIdf.cpp  LayoutRuntimeEspIdf.h  LvglPasswordPrompt.cpp  LvglPasswordPrompt.h  NetEspIdf.cpp  PlatformEspIdf.cpp  PrefsEspIdf.cpp  TextEntryEspIdf.cpp  TextEntryEspIdf.h  TimeSync.cpp  TouchCalibration.cpp  TouchCalibration.h  TouchInputEspIdf.cpp  TouchInputEspIdf.h  app_main.cpp  idf_component.yml
include/: AppConfig.h  README  RuntimeGeo.h  RuntimeSettings.h  WidgetTypes.h
lib/: README
src/: CMakeLists.txt  idf_component.yml  main.cpp  pio_stub.c
src/core/: BootCommon.cpp  DisplayManager.cpp  DisplayManager.h  RuntimeGeo.cpp  RuntimeSettings.cpp  TextEntry.cpp  TimeSync.cpp  TouchMapper.h  Widget.h  WidgetFactory.cpp  WidgetFactory.h  WifiProvisioner.cpp  WifiProvisioner.h
src/dsl/: DslExpr.cpp  DslExpr.h  DslModel.h  DslParser.cpp  DslParser.h
src/platform/: FsArduino.cpp  NetArduino.cpp  PlatformArduino.cpp  PrefsArduino.cpp
src/services/: GeoIpService.cpp  GeoIpService.h  HttpJsonClient.cpp  HttpJsonClient.h  HttpTransportGate.cpp  HttpTransportGate.h
src/widgets/: DslRuntimeCaches.h  DslWidget.cpp  DslWidget.h  DslWidgetExpr.cpp  DslWidgetFetch.cpp  DslWidgetFormat.cpp  DslWidgetRender.cpp
tools/: gen_icons.py  ha_ws_probe.py  import_meteocons.py  pio_filter_data.py  pio_record_hashes.py
(+70 files in other folders)
